--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath 'com.novoda:bintray-release:0.9.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
