--- a/kapp/src/main/AndroidManifest.xml
+++ b/kapp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.joyy.loadsir">
+    package="com.joyy.loadsir">
 
     <application
         android:name=".App"
@@ -9,30 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-
-        </activity>
-        <activity android:name=".target.NormalActivity"/>
-        <activity android:name=".target.ConvertorActivity"/>
-        <activity android:name=".target.FragmentSingleActivity"/>
-        <activity android:name=".target.ViewTargetActivity"/>
-        <activity android:name=".target.DefaultCallbackActivity"/>
-        <activity android:name=".target.MultiFragmentWithViewPagerActivity"/>
-        <activity android:name=".target.MultiFragmentActivity"/>
-        <activity android:name=".target.PlaceholderActivity"/>
-        <activity android:name=".target.AnimateActivity"/>
-        <activity android:name=".target.KeepTitleFragmentActivity"/>
-        <activity android:name=".target.BestPracticesActivity"/>
-        <activity android:name=".target.LottieActivity"/>
         <activity
-            android:name=".target.KeepTitleActivity"
-            android:theme="@style/NoTitle"/>
-        <activity android:name=".target.ConstraintLayoutActivity"/>
+            android:name=".target.NormalActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
