--- a/kapp/src/main/AndroidManifest.xml
+++ b/kapp/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".target.Normal2Activity"
+            android:exported="true" />
+        <activity
             android:name=".target.NormalActivity"
             android:exported="true" />
         <activity
