--- a/kapp/src/main/AndroidManifest.xml
+++ b/kapp/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".target.DefaultCallbackActivity"
+            android:exported="true" />
+        <activity
+            android:name=".target.ViewTargetActivity"
+            android:exported="true" />
+        <activity
+            android:name=".target.FragmentMultiViewPagerActivity"
+            android:exported="true" />
+        <activity
             android:name=".target.FragmentMultiActivity"
             android:exported="true" />
         <activity
