--- a/kapp/build.gradle
+++ b/kapp/build.gradle
@@ -10,6 +10,9 @@ android {
         targetSdkVersion TARGET_SDK_VERSION as int
         versionCode VERSION_CODE as int
         versionName VERSION_NAME
+
+        // 这里添加
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -44,4 +47,6 @@ dependencies {
 //    implementation 'com.airbnb.android:lottie:2.8.0'
     implementation project(':kloadsir')
 //    implementation 'com.kingja.loadsir:loadsir:1.3.8'
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
