--- a/kloadsir/build.gradle
+++ b/kloadsir/build.gradle
@@ -21,5 +21,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.fragment:fragment:1.3.6'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.5.20")
 }
